--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,44 +8,6 @@
     tools:context=".LoginActivity"
     android:background="@drawable/background">
 
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="164dp"
-        android:layout_marginTop="284dp"
-        android:layout_marginEnd="33dp"
-        android:layout_marginBottom="402dp"
-        android:background="#11000000"
-        android:drawableStart="@drawable/ic_action_username"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="textPersonName"
-        android:textColor="#00090808" />
-
-    <EditText
-        android:id="@+id/passwordText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="165dp"
-        android:layout_marginTop="342dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="344dp"
-        android:background="#11000000"
-        android:drawableStart="@drawable/ic_action_lock"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColor="#00141212" />
-
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -59,39 +21,59 @@
         android:layout_marginEnd="-1dp"
         android:layout_marginBottom="-2dp">
 
+        <EditText
+            android:id="@+id/editText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="272dp"
+            android:layout_marginEnd="8dp"
+            android:drawableStart="@drawable/ic_action_username"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="textPersonName"
+            android:textColor="#00090808"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/passwordText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:drawableStart="@drawable/ic_action_lock"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:textColor="#00141212"
+            app:layout_constraintBottom_toTopOf="@+id/loginButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText2" />
+
         <Button
             android:id="@+id/loginButton"
-            android:layout_width="148dp"
-            android:layout_height="51dp"
-            android:layout_marginStart="8dp"
+            android:layout_width="181dp"
+            android:layout_height="56dp"
             android:layout_marginTop="456dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Log In"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.789"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             tools:layout_conversion_absoluteHeight="65dp"
             tools:layout_conversion_absoluteWidth="88dp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/googleButton"
             android:layout_width="181dp"
             android:layout_height="56dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:text="LOG IN WITH GOOGLE"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.836"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
-            app:layout_constraintVertical_bias="0.131"
             tools:layout_conversion_absoluteHeight="65dp"
             tools:layout_conversion_absoluteWidth="88dp" />
     </android.support.constraint.ConstraintLayout>
