--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:layout_marginBottom="-2dp">
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/usernameText"
             android:background="@drawable/edit_teext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,9 +30,10 @@
             android:layout_marginEnd="8dp"
             android:drawableStart="@drawable/ic_action_username"
             android:ems="10"
-            android:hint="Username"
+            android:hint="@string/Username_hint"
+            android:autofillHints="username"
             android:inputType="textPersonName"
-            android:textColor="#00090808"
+            android:textColor="#fff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,12 +46,13 @@
             android:layout_marginBottom="8dp"
             android:drawableStart="@drawable/ic_action_lock"
             android:ems="10"
-            android:hint="Password"
+            android:hint="@string/password_hint"
+            android:autofillHints="password"
             android:inputType="textPassword"
-            android:textColor="#00141212"
+            android:textColor="#fff"
             app:layout_constraintBottom_toTopOf="@+id/loginButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText2" />
+            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
 
         <Button
             android:id="@+id/loginButton"
@@ -60,7 +62,7 @@
             android:layout_marginTop="456dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="Log In"
+            android:text="@string/Login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -75,7 +77,7 @@
             android:layout_height="56dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:text="LOG IN WITH GOOGLE"
+            android:text="@string/google_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
             tools:layout_conversion_absoluteHeight="65dp"
