fixed portrait orientation

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,63 +23,83 @@
 
         <EditText
             android:id="@+id/usernameText"
-            android:background="@drawable/edit_teext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="272dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:autofillHints="username"
+            android:background="@drawable/edit_teext"
             android:drawableStart="@drawable/ic_action_username"
             android:ems="10"
             android:hint="@string/Username_hint"
-            android:autofillHints="username"
             android:inputType="textPersonName"
             android:textColor="#fff"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.341" />
 
         <EditText
             android:id="@+id/passwordText"
-            android:background="@drawable/edit_teext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:autofillHints="password"
+            android:background="@drawable/edit_teext"
             android:drawableStart="@drawable/ic_action_lock"
             android:ems="10"
             android:hint="@string/password_hint"
-            android:autofillHints="password"
             android:inputType="textPassword"
             android:textColor="#fff"
             app:layout_constraintBottom_toTopOf="@+id/loginButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
+            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.81" />
 
         <Button
             android:id="@+id/loginButton"
-            android:background="@drawable/login_shape"
             android:layout_width="181dp"
             android:layout_height="56dp"
-            android:layout_marginTop="456dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:background="@drawable/login_shape"
             android:text="@string/Login"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.898"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintVertical_bias="0.584"
             tools:layout_conversion_absoluteHeight="65dp"
             tools:layout_conversion_absoluteWidth="88dp" />
 
         <Button
             android:id="@+id/googleButton"
-            android:background="@drawable/signup_shape"
             android:layout_width="181dp"
             android:layout_height="56dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/signup_shape"
             android:text="@string/google_login"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/loginButton"
+            app:layout_constraintHorizontal_bias="0.901"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.714"
             tools:layout_conversion_absoluteHeight="65dp"
             tools:layout_conversion_absoluteWidth="88dp" />
     </android.support.constraint.ConstraintLayout>
