--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,24 +84,15 @@
             tools:layout_conversion_absoluteHeight="65dp"
             tools:layout_conversion_absoluteWidth="88dp" />
 
-        <Button
-            android:id="@+id/googleButton"
-            android:layout_width="181dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/signup_shape"
-            android:text="@string/google_login"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.901"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.714"
-            tools:layout_conversion_absoluteHeight="65dp"
-            tools:layout_conversion_absoluteWidth="88dp" />
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            app:layout_constraintEnd_toEndOf="@+id/loginButton"
+            app:layout_constraintStart_toStartOf="@+id/loginButton"
+            app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+
 
         <TextView
             android:id="@+id/textViewsignup"
@@ -120,7 +111,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/googleButton"
+            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
             app:layout_constraintVertical_bias="0.46"
             tools:text="@string/textviewsignUp" />
 
