--- a/app/src/main/res/drawable/rectangle.xml
+++ b/app/src/main/res/drawable/rectangle.xml
@@ -4,13 +4,13 @@
 
     <!-- View background color -->
     <solid
-        android:color="@color/cardview_light_background" >
+        android:color="@color/white" >
     </solid>
 
     <!-- View border color and width -->
     <stroke
         android:width="1dp"
-        android:color="@color/cardview_dark_background" >
+        android:color="#03040C" >
     </stroke>
 
     <!-- The radius makes the corners rounded -->
